[tool.poetry]
name = "vscode-python"
version = "0.1.0"
description = ""
authors = ["Makoto Tanji <tanji.makoto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 2
lint.select = ["E1", "E3", "E4", "E7", "E9", "F", "W2", "W3"]
lint.ignore = [
  "T201",
  "D400", "D415",
  "INP001",
  "ERA001",
  "RET504",
]
